updating with Project 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,9 @@ body {
   min-height: 100vh;
   justify-content: flex-start;
 }
-
+.groove-guide{
+  width: 300px;
+}
 h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
@@ -118,12 +120,23 @@ footer {
   padding: 20px;
 }
 
+.code-card .card-header {
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+}
+
+.code-card:hover,
+.code-card:hover .card-header {
+  box-shadow: inset 0px 0px 8px rgba(232, 102, 236, 1), 0 0 15px rgba(232, 102, 236, 1);
+}
+
 .card > p {
   text-align: center;
 }
 
 .card > img {
-  width: 100%;
+  width: 300px;
+
 }
 
 @media screen and (max-width: 768px) {
